# got-board-api-v3

./: .env  .env.example  Cargo.toml  seed.sql
migrations/2020-02-25-215149_create_matches/: up.sql
migrations/2020-02-29-204303_create_houses/: up.sql
migrations/2020-02-29-204303_create_users/: up.sql
migrations/2020-04-05-220958_create_matches_users/: down.sql  up.sql
migrations/2020-04-22-220220_create_pieces/: down.sql  up.sql
src/: db.rs  lib.rs  main.rs  match.rs  match_model.rs  models.rs  routes.rs  schema.rs
src/models/: mod.rs
src/models/services/: mod.rs
