[package]
name = "got-board-api-v3"
version = "0.1.0"
authors = ["Rafael Borgonovi Tauil <rafael@tauil.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_codegen = "0.4.2"
rocket_contrib = "0.4.2"
serde = "1.0.104"
serde_derive = "1.0.104"
