[package]
name = "got_board_api_v3"
version = "0.1.0"
authors = ["Rafael Borgonovi Tauil <rafael@tauil.com.br>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
rocket_codegen = "0.4.2"
serde = { version = "1.0.104", features = ["derive"] }
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
itertools = "0.9.0"
pusher = "0.3.1"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
