[package]
name = "got_board_api_v3"
version = "0.1.0"
authors = ["Rafael Borgonovi Tauil <rafael@tauil.com.br>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
rocket_codegen = "0.4.2"
rocket_cors = "0.5.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.51"
diesel = { version = "1.0.0", features = ["postgres", "chrono", "serde_json"] }
dotenv = "0.9.0"
itertools = "0.9.0"
pusher = "0.4.1"
rustc-serialize = "0.3.24"
chrono = { version = "0.4.11", features = ["serde"] }
futures = "0.3.4"
tokio = "0.2.20"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
